--- a/LECTURE1.html
+++ b/LECTURE1.html
@@ -311,6 +311,9 @@ div.tocify {
     <li>
       <a href="LECTURE6.html">Age-structured populations</a>
     </li>
+    <li>
+      <a href="LECTURE7.html">Stochastic population models</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
