--- a/schedule.html
+++ b/schedule.html
@@ -214,6 +214,9 @@ $(document).ready(function () {
     <li>
       <a href="LECTURE6.html">Age-structured populations</a>
     </li>
+    <li>
+      <a href="LECTURE7.html">Stochastic population models</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
