--- a/schedule.html
+++ b/schedule.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <td align="left">Week 4</td>
 <td align="left">2/14/2017</td>
 <td align="left">LECTURE 1: Final projects; Small-population paradigm</td>
-<td align="left"></td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
