lab 3 age structured populations

--- a/Links.html
+++ b/Links.html
@@ -330,6 +330,9 @@ div.tocify {
     <li>
       <a href="LAB2.html">Lab 2: logistic growth</a>
     </li>
+    <li>
+      <a href="LAB3.html">Lab 3: age-structured population growth</a>
+    </li>
   </ul>
 </li>
 <li>
