--- a/schedule.html
+++ b/schedule.html
@@ -232,6 +232,9 @@ $(document).ready(function () {
     <li>
       <a href="LAB2.html">Lab 2: logistic growth</a>
     </li>
+    <li>
+      <a href="LAB3.html">Lab 3: age-structured population growth</a>
+    </li>
   </ul>
 </li>
 <li>
