--- a/schedule.html
+++ b/schedule.html
@@ -325,7 +325,7 @@ $(document).ready(function () {
 <td align="left"></td>
 <td align="left">2/9/2017</td>
 <td align="left">LECTURE 2: Age-structured populations</td>
-<td align="left"><a href="lande.pdf">Lande 1992</a></td>
+<td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
@@ -342,44 +342,44 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/16/2017</td>
-<td align="left">LECTURE 2: Stochasticity and uncertainty</td>
-<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left">LECTURE 2: Matrix population models</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/17/2017</td>
-<td align="left">LAB: PVA1: Density-regulated, age-structured, stochastic population model</td>
+<td align="left">LAB: Matrix population models in R and InsightMaker</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 5</td>
 <td align="left">2/21/2017</td>
-<td align="left">LECTURE 1: Population Viability Analysis; Small population paradigm</td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
+<td align="left">LECTURE 1: Stochasticity and Uncertainty</td>
+<td align="left"><a href="lande.pdf">Lande 1992</a> and <a href="Regan_2002.pdf">Regan 2002</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/23/2017</td>
-<td align="left">MIDTERM #1</td>
+<td align="left">MIDTERM #1 (instructors away, Danielle Miles will proctor)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/24/2017</td>
-<td align="left">LAB: Group projects (instructors away- grad student will be present)</td>
+<td align="left">LAB: Stochasticity (short) and Group projects (instructors away- Nathan Cook will be present)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
 <td align="left">2/28/2017</td>
-<td align="left">LECTURE 1: Detecting density dependence in natural populations</td>
-<td align="left"><a href="brook1.pdf">Brook et al. 2006</a></td>
+<td align="left">LECTURE 1: Population Viability Analysis; Small population paradigm</td>
+<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/2/2017</td>
-<td align="left">LECTURE 2: Assessing model performance and handling model uncertainty (e.g., sensitivity analysis, cross-validation)</td>
-<td align="left">Akçakaya et al 2005</td>
+<td align="left">LECTURE 2: Small-population paradigm</td>
+<td align="left">[MVP paper]</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
@@ -557,14 +557,17 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
-<pre><code>                  OTHER TOPICS                                                                                                           OTHER READINGS                                  
-                  Parameter estimation; capture-recapture data                                                                           Amstrup et al. Chap. 1                          
-                  Estimate survival with open-population capture-recapture (program MARK)                                                Cooch and White Chaps 1,2                       
-                  Estimate survival with open-population capture-recapture (program MARK) (continued)                                    Cooch and White Chaps 3,4                       
-                  Capture-recapture analysis  (continued)                                                                                                                                
-                  Small-population paradigm                                                                                                                                              
-                  Species Distribution Modeling in R. Defining habitat.                                                                                                                  
-                  sensitivity and elasticity lab?                                                                                                                                        </code></pre>
+<pre><code>                  OTHER TOPICS                                                                                                OTHER READINGS                                           
+                  Parameter estimation; capture-recapture data                                                                Amstrup et al. Chap. 1                                   
+                  Estimate survival with open-population capture-recapture (program MARK)                                     Cooch and White Chaps 1,2                                
+                  Estimate survival with open-population capture-recapture (program MARK) (continued)                         Cooch and White Chaps 3,4                                
+                  Capture-recapture analysis  (continued)                                                                                                                              
+                  Assessing model performance and handling model uncertainty (e.g., sensitivity analysis, cross-validation)   Akçakaya et al 2005                                      
+                  Species Distribution Modeling in R. Defining habitat.                                                                                                                
+                  sensitivity and elasticity lab?                                                                                                                                      
+                  PVA1: Density-regulated, age-structured, stochastic population model                                                                                                 
+                                                                                                                                                                                       
+                  LECTURE 1: Detecting density dependence in natural populations                                              [Brook et al. 2006](brook1.pdf)                          </code></pre>
 
 
 
